# VideoBricks

./: .gitignore  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: export_transnet_onnx.py  requirements.txt  transnet_detect.py
src-tauri/src/: gifski_bridge.rs  main.rs  settings.rs  taskbar.rs
src-tauri/src/commands/: convert.rs  export.rs  mod.rs  settings.rs  video.rs
src-tauri/src/video/: ffmpeg.rs  mod.rs  validator.rs
src/components/: AboutModal.tsx  CircularProgress.tsx  CropMask.tsx  CropOverlay.tsx  CropToolbar.tsx  DimensionsPicker.tsx  DropZone.tsx  EditableValue.tsx  EstimatedSize.tsx  TrimSlider.tsx  VideoPlayer.tsx
src/hooks/: useConversion.ts  useSettings.ts  useVideoMeta.ts
src/lib/: tauri.ts  types.ts
src/screens/: CompletedScreen.tsx  ConversionScreen.tsx  EditScreen.tsx  StartScreen.tsx
src/styles/: globals.css
