[package]
name = "videobricks"
version = "1.0.0"
description = "VideoBricks - Convert videos to high-quality GIFs and MP4s"
authors = ["alonsorobots"]
edition = "2021"
rust-version = "1.77"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
gifski = { version = "1.34", default-features = false, features = ["gifsicle"] }
imgref = "1.11"
rgb = { version = "0.8", features = ["bytemuck"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
thiserror = "2"
base64 = "0.22"
raw-window-handle = "0.6"
tauri-plugin-drag = "2.1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_System_Com",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
